[Soubhagya]:UPDATED some of the note services
